<resources>
    <string name="app_name">Professional\nToolkit</string>
    <string name="no_internet">No Internet</string>
    <string name="host_internet">No Internet Connection</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="retry">Please Retry</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="forget_pwd">Don\'t worry! Just fill in your email address and\nwe\'ll send you a link which you can use to create a new password</string>
    <string name="email_txt">Email Address</string>
    <string name="current_session">Current Session:</string>
    <string name="complete_session">Completed Session:</string>
    <string name="action_settings">Settings</string>
    <string name="submit">SUBMIT</string>
    <string name="open_location_settings">Settings</string>
    <string name="location_disabled">Your location services are disabled.</string>
    <string name="location_disabled_message">Turn on your Location from the Settings to help us locate you.</string>
    <string name="Cancel">Cancel</string>
    <string name="Description">Description</string>
    <string name="StartTime">Start Time</string>
    <string name="EndTime">End Time</string>
    <string name="SelectLocation">Select Location</string>
    <string name="age">Age</string>
    <string name="slottime">Slot time working</string>
    <string name="gender">Gender</string>
    <string name="Height">Height</string>
    <string name="HeightOpn">Height like:- 175cm (Optional)</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">SEND</string>
    <string name="get_started">Fill out the form below to create a new account\nand get started now!</string>
    <string name="Weight">Weight</string>
    <string name="WeightOpn">Weight like:- 54kg (Optional)</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Trainer">Trainer</string>
    <string name="Customer">Client</string>
    <string name="choose_login">Choose Your Primary Role To\nLogin To Your Account</string>
    <string name="login">LOGIN</string>
    <string name="FullName">Full Name:</string>
    <string name="Full_Name">Full Name</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="phone_no">Phone Number:</string>
    <string name="next">NEXT ></string>
    <string name="Date">Date</string>
    <string name="apply_now">APPLY NOW</string>
    <string name="Location">Location</string>
    <string name="TypeOfTraining">Type Of Training</string>
    <string name="Bio">Bio</string>
    <string name="year">2017</string>
    <string name="month">Thursday,10 August</string>
    <string name="SelectMonth">Select Month</string>
    <string name="SelectYear">Select Year</string>
    <string name="OldPassword">Old Password</string>
    <string name="NewPassword">New Password</string>
    <string name="ConfirmNewPassword">Confirm New Password</string>
    <string name="Search">Search</string>
    <string name="NoCustomer">No Client Found.</string>
    <string name="NoTrainer">No Trainer Found.</string>
    <string name="NoMessage">There are no messages yet.</string>
    <string name="NoNotifications">There are no notifications right now.</string>
    <string name="NoRequest">No Request Found</string>
    <string name="CurrentTrainer">Current Trainer</string>
    <string name="submit_now">SUBMIT NOW</string>
    <string name="Dashboard">Dashboard</string>
    <string name="completed">Completed Session</string>
    <string name="Package">My Package</string>
    <string name="AddAvailability">Add Availability</string>
    <string name="Request">Request</string>
    <string name="Community">Community</string>
    <string name="MyTrainer">My Trainer</string>
    <string name="MyTrainers">My Trainers</string>
    <string name="Notifications">Notifications</string>
    <string name="Reports">Reports</string>
    <string name="ChangePassword">Change Password</string>
    <string name="Logout">Logout</string>
    <string name="MyMessages">My Messages</string>
    <string name="BodyFatPercent">Body Fat Percentage</string>
    <string name="BodyFatPercentOpn">Body Fat Percentage (Optional)</string>
    <string name="signup_now">Sign Up Now!</string>
    <string name="account">Don\'t have an account? </string>
    <string name="forgot_pwd_txt">Forgot Password?</string>
    <string name="login_txt">Login to your account with your email and password to begin a new experience with us!</string>
    <string name="MarkSession">Mark Session Completed</string>
    <string name="BodyFat">Body Fat</string>
    <string name="SendMessage">Send Message</string>
    <string name="BodyMeasurement">Body Measurement</string>
    <string name="available">Please add your availability on Thursday,September 07,2017</string>
    <string name="available1">Please add your availability</string>
    <string name="title">Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="GPSAlertDialogTitle">Professional Toolkit</string>
    <string name="GPSAlertDialogMessage">GPS Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_trainer_dashboard">TrainerDashboardActivity</string>
    <string name="goal">So your today\'s calorie goal for each meal is 1,650 calories,so that you can tailor your experience and stay on track</string>
    <string name="calorie_goal">! Calorie Goals for Today are 1,650 cals</string>
    <string name="complete">Completed Session</string>
</resources>
