<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/g1">
        <item
            android:id="@+id/trainer_profile"
            android:icon="@drawable/myprofile"
            android:title="My Profile" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/g2">
        <item
            android:id="@+id/trainer_dashboard"
            android:icon="@drawable/dashicon"
            android:title="@string/Dashboard" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/g3">
        <item
            android:id="@+id/trainer_addpackage"
            android:icon="@drawable/addpackage_2x"
            android:title="Add Package" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/g4">
        <item
            android:id="@+id/trainer_package"
            android:icon="@drawable/my_pckge"
            android:title="@string/Package" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/g5">
        <item
            android:id="@+id/trainer_request"
            android:icon="@drawable/community2x"
            android:title="@string/Request" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/g6">
        <item
            android:id="@+id/trainer_message"
            android:icon="@drawable/messicon"
            android:title="@string/MyMessages" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/g7">
        <item
            android:id="@+id/trainer_notifications"
            android:icon="@drawable/notification_2x"
            android:title="@string/Notifications" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/g8">
        <item
            android:id="@+id/trainer_change_password"
            android:icon="@drawable/passicon"
            android:title="@string/ChangePassword" />
    </group>

    <item
        android:enabled="false"
        android:id="@+id/trainer_change_password1"
        android:title="" />

</menu>

