<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:id="@+id/container"
    tools:context="health.app.Activities.CommonLoginActivity">

    <LinearLayout
        android:background="#FFFFFF"
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include layout="@layout/toolbar" />
    </LinearLayout>
    <View
        android:id="@+id/view"
        android:layout_below="@+id/toolbar_layout"
        android:background="#858585"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>
    <ScrollView
        android:scrollbars="none"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:src="@drawable/loginicon2x" />

            <TextView
                android:textColor="#818181"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/login_txt"
                android:textSize="14sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyTextInputLayout"
                android:layout_marginTop="20dp">

                <EditText
                    android:inputType="textEmailAddress"
                    android:drawableRight="@mipmap/emailicon2x"
                    android:textColorHint="#818181"
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_txt"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyTextInputLayout"
                android:layout_marginTop="20dp">

                <EditText
                    android:drawableRight="@mipmap/password2x"
                    android:textColorHint="#818181"
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_trainer"
                    android:textSize="14sp"
                    android:buttonTint="@color/colorAccent"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Are you Trainer" />

                    <CheckBox
                        android:id="@+id/cb_customer"
                        android:layout_marginTop="5dp"
                        android:textSize="14sp"
                        android:buttonTint="@color/colorAccent"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Are you Client" />
                </LinearLayout>

                <TextView
                    android:textSize="13sp"
                    android:id="@+id/tv_forget_psd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="@string/forgot_pwd_txt"
                    android:textColor="#000000" />

            </RelativeLayout>

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bt_backgound"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <TextView
                    android:textSize="14sp"
                    android:id="@+id/tv_not_menber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textColor="#000000" />

                <TextView
                    android:textSize="13sp"
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/tv_not_menber"
                    android:text="@string/signup_now"
                    android:textAllCaps="true"
                    android:textColor="#FF7010" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
